--- a/src/app/delete/grupo-delete/grupo-delete.component.html
+++ b/src/app/delete/grupo-delete/grupo-delete.component.html
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-2 bg-cinza-claro">
 
-            <div class="container mt-5">
+            <!-- <div class="container mt-5">
 
                 <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                     <div class="card-header">Mensagens Privadas</div>
@@ -62,7 +62,7 @@
                 </div>
 
 
-            </div>
+            </div> -->
 
         </div>
     </div>
