--- a/src/app/edit/grupo-edit/grupo-edit.component.html
+++ b/src/app/edit/grupo-edit/grupo-edit.component.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="col-md-2 bg-cinza-claro">
-
+<!-- 
       <div class="container mt-5">
 
         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
@@ -75,7 +75,7 @@
             <p class="card-text">Não briga com o Joel Jamily!!!!!</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
 
     </div>
