--- a/src/app/edit/user-edit/user-edit.component.html
+++ b/src/app/edit/user-edit/user-edit.component.html
@@ -90,7 +90,7 @@
 
         <div class="col-md-2 bg-cinza-claro">
 
-            <div class="container mt-5">
+            <!-- <div class="container mt-5">
 
                 <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                     <div class="card-header">Mensagens Privadas</div>
@@ -108,7 +108,7 @@
                 </div>
 
 
-            </div>
+            </div> -->
 
         </div>
 
