--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -1,7 +1,7 @@
 <!-- As a link -->
 <nav *ngIf='auth.naoLogado()' class="navbar navbar-light bg-verde-escuro">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/entrar"><img src="../../assets/img/Ciclonext-preto-completo.svg" alt="Logo Ciclonext" class="logo img-fluid p-1"></a>
+    <a class="navbar-brand" routerLink='/entrar'><img src="../../assets/img/Ciclonext-preto-completo.svg" alt="Logo Ciclonext" class="logo img-fluid p-1"></a>
         
         <ul class="nav nav-pills">
           <li class="nav-item">
