--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -1,13 +1,13 @@
-<div class="container-fluid">
+<div class="container-fluid" >
     <div class="row ">
 
-        <div class="col-md-6 d-flex justify-content-center align-items-center">
+        <div class="col-md-6 d-flex justify-content-center align-items-center"id="img-bg-entrar-esquerda"  >
 
             <div class="row ">
 
-                <div class="col-md-12  ">
+                <div class="col-md-12">
 
-                    <h1 class="text-center mb-3">Entrar</h1>
+                    <h1 class="text-center fw-bold mb-3">Entrar</h1>
 
 
                     <div class="form-group mb-3">
@@ -28,7 +28,7 @@
 
                     <hr class="mb-5 mt-5">
 
-                    <p class="text-center">
+                    <p class="text-center fw-bold">
                         Não tem uma conta? <a routerLink='/cadastrar'>Cadastre-se</a>
                     </p>
 
@@ -39,7 +39,7 @@
 
         </div>
 
-        <div class="col-md-6" id="img-bg"></div>
+        <div class="col-md-6" id="img-bg-entrar"></div>
 
 
     </div>
