--- a/src/app/grupo-page/grupo-page.component.css
+++ b/src/app/grupo-page/grupo-page.component.css
@@ -41,6 +41,10 @@ body {
 	object-fit: cover;
     
 }
+
+.h8 {
+    font-size: 1.2rem;
+}
 .bg-color-cancelar{
     background-color: #E59347;
     color: white;
@@ -66,12 +70,6 @@ body {
 	display: flex;
 }
 
-.fotoPerfil{
-	object-fit: cover;
-	display: flex;
-	height: 100px;
-	width: 100px;
-}
 
 .select{
 	width: 230px;
