--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -4,18 +4,18 @@
 
         <div class="col-md-6" id="img-bg2"></div>
 
-        <div class="col-md-6 d-flex justify-content-center align-items-md-center ">
+        <div class="col-md-6 d-flex justify-content-center align-items-md-center" id="img-bg-cadastrar-direita">
 
             <div class="row ">
 
                 <!-- <div class="col-md-12 px-3 "> -->
 
-                    <h1 class="text-center">Cadastro</h1>
+                    <h1 class="text-center fw-bold text-secondary">Cadastro</h1>
 
                     <div class="form-group mb-3 px-lg-5">
                         <label class="mb-2" for="tipo">Tipo de Usuário</label>
                         <select class="form-select" name="tipo" id="tipo" (change) = 'tipoUser($event)'>
-                            <option>Selecione um tipo de usuário</option>
+                            <option value="">Selecione um tipo de usuário</option>
                             <option value="EMPRESA">Empresa</option>
                             <option value="ONG">ONG</option>
                             <option value="USUARIO">Pessoa Física</option>
@@ -29,12 +29,17 @@
 
                     <div class="form-group mb-3 px-lg-5">
                         <label for="email">Email</label>
-                        <input [(ngModel)]='user.email' class="form-control" type="text" name="email" id="email" placeholder="example@email.com">
+                        <input [(ngModel)]='user.email' class="form-control" type="text" name="email"
+                        (keyup)='validaEmail($event)' id="email" placeholder="example@email.com">
+                        <div id="txtMail"></div>
+
                     </div>
 
                     <div class="form-group mb-3 px-lg-5">
                         <label for="foto">Foto</label>
-                        <input [(ngModel)]='user.urlImagemPerfil' class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto">
+                        <input [(ngModel)]='user.urlImagemPerfil' class="form-control" type="text" name="foto" 
+                        (keyup)='validaImagem($event)' id="foto" placeholder="Link da sua foto" >
+                        <div id="txtImagem"></div>
                     </div>
 
                     <div class="form-group mb-3 px-lg-5">
