--- a/src/app/delete/grupo-delete/grupo-delete.component.css
+++ b/src/app/delete/grupo-delete/grupo-delete.component.css
@@ -22,3 +22,8 @@
     background-color: #F1EB8D;
     transition-duration: 1s;
 }
+.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+}
