--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,64 +1,82 @@
 <div class="container-fluid">
     <div class="row justify-content-md-center">
+        <!-- <div class="col-md-1" id="img-bg"></div> -->
+        <div class="col-md-3 " id="img-bg" style="background-color: #ffffff;">
 
-        <div class="col-md-2 bg-cinza-claro">
+            <div class="col-md-3 sticky">
 
+                    <div class="d-flex justify-content-center p-3 " >
+                        <img src="{{foto}}" alt="foto perfil do usuario" class="rounded-circle fotoPerfil">
+                    </div>
+                    <div class="d-flex justify-content-center" >
+                        <h3 class="text-center mb-5 p-3" style="background-color: #ffffff;">{{nome}}
 
-            <div class="d-flex justify-content-center p-3">
-                <img src="{{foto}}" alt="foto perfil do usuario" class="rounded-circle fotoPerfil">
+                        <img *ngIf= "categoria == 'USUARIO'" src="../../assets/img/pessoaFisica.svg" alt="" height="25px" width="25px">
+                        <img *ngIf= "categoria == 'ONG'" src="../../assets/img/ong.svg" alt="" height="25px" width="25px">
+                        <img *ngIf= "categoria == 'EMPRESA'" src="../../assets/img/empresa.svg" alt="" height="25px" width="25px">
+                        
+                    </h3>
+                    </div>
             </div>
-
-            <h3 class="text-center mb-5">{{nome}}</h3>
-
         </div>
 
-        <div class="col-md-8 mt-2">
-            <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-md-8">
-
+        <div class="col-md-6 mt-3 px-lg-5">
+            <div class="row mb-3 d-flex justify-content-center align-items-center"
+                style="border: solid 1px; border-color: #F0F0F0; border-radius: 15px;">
+                <!-- <div class="row" > -->
+                <div class="col-md-7">
                     <div class="form-group mt-3 px-lg-5">
-                        <textarea class="form-control" id="textoDaMensagem" rows="4" [(ngModel)]='postagem.corpo'
-                            placeholder="Escreva sua postagem aqui.."></textarea>
+                        <textarea class="form-control" id="assunto" rows="4" (keyup)='validaAssunto($event)'
+                            [(ngModel)]='postagem.corpo' placeholder="Escreva sua postagem aqui..."></textarea>
+                        <div id="txtAssunto"></div>
                     </div>
 
                     <div class="form-group mb-3 mt-3 px-lg-5">
 
                         <label for="urlImagem">Link da Imagem</label>
                         <input class="form-control" type="text" name="urlImagem" id="urlImagem"
-                            placeholder="Insira o link da sua foto" [(ngModel)]='postagem.urlImagemVideo'>
+                            (keyup)='validaImagem($event)' placeholder="Insira o link da sua foto"
+                            [(ngModel)]='postagem.urlImagemVideo'>
+                        <div id="txtImagem"></div>
                     </div>
-
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3 px-lg-5">
-                        <div class="form-group mb-1">
-                            <label for="tipoDaPostagem">Tipo de postagem</label>
-                            <select class="form-control" name="tipoDaPostagem" id="tipoDaPostagem"
-                                (change)='tipoDaPostagem($event)'>
-                                <option>Selecione um tipo de postagem</option>
-                                <option value="TEXTO">Texto</option>
-                                <option value="DOACAO">Doação</option>
-                                <option value="AGRADECIMENTO">Agradecimento</option>
-                                <option value="OUTROS">Outros</option>
-                            </select>
+                    <div class="row">
+                        <div class="col-md-6 d-flex justify-content-start">
+                            <div class="d-grid gap-2 d-md-flex justify-content-md-start p-3 px-lg-5">
+                                <div class="form-group mb-1">
+                                    <label for="tipoDaPostagem">Tipo de postagem</label>
+                                    <select class="form-control" name="tipoDaPostagem" id="tipoDaPostagem"
+                                        (change)='tipoDaPostagem($event)'>
+                                        <option value="">Escolha aqui: </option>
+                                        <option value="TEXTO">Texto</option>
+                                        <option value="DOACAO">Doação</option>
+                                        <option value="AGRADECIMENTO">Agradecimento</option>
+                                        <option value="OUTROS">Outros</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
-                        <button class="btn fw-bold temporizadorGo bg-color-cancelar my-3" type="submit"
-                            (click)='cancelarPost()'>Cancelar</button>
+                        <div class="col-md-6 d-flex justify-content-end">
+                            <button class="btn fw-bold temporizadorGo bg-color-cancelar me-2 my-5" type="submit"
+                                (click)='cancelarPost()'>Cancelar</button>
 
-                        <button class="btn fw-bold temporizadorCancel bg-color-publicar my-3" type="submit"
-                            (click)='postarNoFeed()'>Publicar</button>
+                            <button class="btn fw-bold temporizadorCancel bg-color-publicar my-5 me-5" type="submit"
+                                (click)='postarNoFeed()'>Publicar</button>
+                        </div>
+
                     </div>
-
 
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-5 d-flex justify-content-start">
 
                     <img src="{{postagem.urlImagemVideo}}" alt="" class="img-front"
                         placeholder="https://i.imgur.com/bypj39b.png">
-                    <img src="https://i.imgur.com/bypj39b.png" width="350px" height="350px"
+                    <img src="https://i.imgur.com/bypj39b.png" width="350px" height="350px" class="margin-font-foto"
                         *ngIf="postagem.urlImagemVideo == null" />
 
 
                 </div>
+                <!-- </div> -->
             </div>
 
             <!-- <hr class="d-flex justify-content-end " style="padding-right: -1000px;"> -->
@@ -84,9 +102,9 @@
                     *ngFor='let post of listaPostagens | orderBy : key : reverse'>
                     <div class="card-header">
                         <div class="row">
-                            <div class="col-md-5 d-flex justify-content-start">
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="d-flex justify-content-between align-items-center">
+                            <div class="col-md-6 d-flex justify-content-start">
+                                <div class="d-flex justify-content-between mt-3 ">
+                                    <div class="d-flex justify-content-between">
                                         <div class="me-2 ">
 
                                             <img class="rounded-circle fotoPubli" width="60" height="60"
@@ -94,21 +112,27 @@
                                         </div>
                                         <div class="ms-2">
                                             <div class="h5 m-0">{{post.autor.nome}}</div>
-                                            <div class="h7 text-muted">{{post.tipoPostagem}}</div>
+                                            <div class="h7 mt-1 text-muted">{{post.tipoPostagem}}</div>
+                                            <img *ngIf= "post.autor.categoria == 'USUARIO'" src="../../assets/img/pessoaFisica.svg" class="mt-2" alt="" height="25px" width="25px">
+                                            <img *ngIf= "post.autor.categoria == 'ONG'" src="../../assets/img/ong.svg" class="mt-2" alt="" height="25px" width="25px">
+                                            <img *ngIf= "post.autor.categoria == 'EMPRESA'" src="../../assets/img/empresa.svg" class="mt-2" alt="" height="25px" width="25px">
+
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-5"></div>
+                            <div class="col-md-3"></div>
 
 
-                            <div *ngIf='post.grupo!=null' class="col-md-2 d-flex justify-content-center">
+                            <div *ngIf='post.grupo!=null' class="col-md-3">
 
-                                <div class="d-flex justify-content-center">
+                                <div class="">
                                     <div class="">
-                                        <div class="">
+                                        <h6 class="text-center fw-bold text-secondary">Grupo</h6>
 
-                                            <img class="mt-3 rounded-circle fotoPublic" width="60" height="60"
+                                        <div class="d-flex justify-content-center">
+
+                                            <img class="fotoPublic" width="60" height="60" style="border-radius: 10px;"
                                                 src='{{post.grupo.urlImagemGrupo}}' alt="">
                                         </div>
                                         <div class="">
@@ -129,13 +153,13 @@
                             <div class="text-muted h7"> <i class="fa fa-clock-o"></i>{{post.data | date:
                                 'dd/MM/yyyy'}} às {{post.data | date: 'HH:mm'}}
                             </div>
-                            <p class="card-text mt-3">{{post.corpo}}</p>
-                            
+                            <p class="card-text mt-3 h8">{{post.corpo}}</p>
+
                             <img src="{{post.urlImagemVideo}}" alt="" decoding="auto"
-                                class="max-width-height-numero mt-2 ">
+                                class="max-width-height-numero displayed mt-2">
 
 
-                           
+
                         </div>
                     </div>
 
@@ -145,25 +169,7 @@
             </div>
         </div>
 
-        <div class="col-md-2 bg-cinza-claro">
-
-            <!--Mensagens privadas-->
-            <!-- <div class="container mt-5">
-
-                <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-                    <div class="card-header">Mensagens Privadas</div>
-                    <div class="card-body">
-                        <span
-                            class="position-absolute top-0 start-100 translate-middle p-lg-2 bg-danger border border-light rounded-circle">
-                            <span class="visually-hidden">New alerts</span>
-                        </span>
-                        <h5 class="card-title">Bruno</h5>
-                        <p class="card-text">Não briga com o Joel Jamily!!!!!</p>
-                    </div>
-                </div>
-
-
-            </div> -->
+        <div class="col-md-3" id="img-bg-invertido" style="background-color: #ffffff;">
 
         </div>
 
