--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-verde-escuro">
+<nav class="navbar navbar-expand-lg navbar-light bg-verde-escuro sticky-top">
     <div class="container-fluid">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -21,7 +21,7 @@
                 </li>
 
                 <li class="nav-item p-lg-3">
-                    <p class="m-0 fw-bold text-white fs-16"><a class="text-white text-decoration-none opacity50 opacity100" routerLink="/grupo">Grupo</a></p>
+                    <p class="m-0 fw-bold text-white fs-16"><a class="text-white text-decoration-none opacity50 opacity100" routerLink="/grupo">Grupos</a></p>
                 </li>
 
                 <!-- <li class="nav-item p-lg-3">
