--- a/src/app/postagem/postagem.component.html
+++ b/src/app/postagem/postagem.component.html
@@ -3,26 +3,37 @@
 
 
 
-        <div class="col-md-2 bg-cinza-claro">
+        <div class="col-md-3" id="img-bg">
 
 
-            <div class="d-flex justify-content-center p-3">
-                <img src="{{foto}}" alt="foto perfil do usuario" class="rounded-circle fotoPerfil">
+            <div class="col-md-3 sticky">
+
+                <div class="d-flex justify-content-center p-3 ">
+                    <img src="{{foto}}" alt="foto perfil do usuario" class="rounded-circle fotoPerfil">
+                </div>
+
+                <h3 class="text-center mb-5 p-3" style="background-color: #ffffff;">{{nome}}
+                
+                    <img *ngIf= "categoria == 'USUARIO'" src="../../assets/img/pessoaFisica.svg" alt="" height="25px" width="25px">
+                    <img *ngIf= "categoria == 'ONG'" src="../../assets/img/ong.svg" alt="" height="25px" width="25px">
+                    <img *ngIf= "categoria == 'EMPRESA'" src="../../assets/img/empresa.svg" alt="" height="25px" width="25px">
+                
+                </h3>
             </div>
-
-            <h3 class="text-center mb-5">{{nome}}</h3>
 
         </div>
 
-        <div class="col-md-8 mt-2">
+        <div class="col-md-6 mt-2 px-lg-5">
+
+            <h1 class="fw-bold text-secondary mt-2 p-3">Meu Perfil</h1>
 
 
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 d-flex justify-content-center">
 
                     <div class="d-flex justify-content-center">
-                        <img src="https://i.imgur.com/se62aUR.png" alt="imagem perfil" height="500px" width="500px"
-                            class="rounded mx-auto d-block">
+                        <img src="https://i.imgur.com/qAJ4jET.png" alt="imagem perfil" height="500px" width="500px"
+                            class="rounded mx-auto d-block me-5 mb-3">
                     </div>
 
                 </div>
@@ -67,19 +78,6 @@
 
 
             <div class="container px-lg-5" style="background-color: #ffffff; padding-right: 1500px;">
-                <!-- <div class="form-group justify-content-end mb-3">
-
-                    <div class="d-flex justify-content-end">
-                        <select class="form-select select" name="filtroPostagem" id="filtroPostagem"
-                            (change)='tipoDeFiltro($event)'>
-                            <option value="">Filtrar tipo de postagens</option>
-                            <option value="TEXTO">Texto</option>
-                            <option value="DOACAO">Doação</option>
-                            <option value="AGRADECIMENTO">Agradecimento</option>
-                            <option value="OUTROS">Outros</option>
-                        </select>
-                    </div>
-                </div> -->
 
 
                 <!--- \\\\\\\Post-->
@@ -96,7 +94,11 @@
                                         </div>
                                         <div class="ms-2">
                                             <!-- <div class="h5 m-0">{{post.autor.nome}}</div> -->
-                                            <div class="h7 text-muted">{{post.tipoPostagem}}</div>
+                                            <div class="h7 mt-1 text-muted">{{post.tipoPostagem}}</div>
+                                            <img *ngIf= "post.autor.categoria == 'USUARIO'" src="../../assets/img/pessoaFisica.svg" class="mt-2" alt="" height="25px" width="25px">
+                                            <img *ngIf= "post.autor.categoria == 'ONG'" src="../../assets/img/ong.svg" class="mt-2" alt="" height="25px" width="25px">
+                                            <img *ngIf= "post.autor.categoria == 'EMPRESA'" src="../../assets/img/empresa.svg" class="mt-2" alt="" height="25px" width="25px">
+
                                         </div>
                                     </div>
                                 </div>
@@ -105,33 +107,23 @@
 
                             </div>
 
-                            <!-- <div *ngIf='post.grupo!=null' class="col-md-1 d-flex justify-content-center">
-
-                                <div class="d-flex justify-content-center">
-                                    <div class="">
-                                        <div class="">
-
-                                            <img class="mt-3 rounded-circle fotoPublic" width="60" height="60"
-                                                src='{{post.grupo.urlImagemGrupo}}' alt="AAA">
-                                        </div>
-                                        <div class="">
-                                            <div class="h7 m-0 mt-2 text-muted text-center">{{post.grupo.nomeGrupo}}
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div> -->
-
+                            
                             <div class="col-md-2 d-flex justify-content-center">
 
-                                <div class="btn-group" role="group" aria-label="Basic example">
-                                    <button type="button" class="btn" [routerLink]="['/postagem-edit', post.idPostagem]"
+                                <div class="btn-group" role="group" aria-label="Basic example" >
+                                    <div id="edit">                                    
+                                        <button type="button" class="btn" [routerLink]="['/postagem-edit', post.idPostagem]" 
                                         href="#"><i class="fa fa-pencil" aria-hidden="true"></i></button>
-                                    <button type="button" class="btn"
-                                        [routerLink]="['/postagem-delete', post.idPostagem]" href="#"><i
-                                            class="fa fa-trash-o" aria-hidden="true"></i>
-                                    </button>
+                                        <div class="text-center" id="popup"> Editar </div>
+
+                                    </div>
+
+                                        <div id="apagar">                                    
+                                        <button type="button" class="btn" [routerLink]="['/postagem-delete', post.idPostagem]" 
+                                        href="#"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
+                                        <div class="text-center" id="popup"> Apagar </div>
+                                        </div>
+
                                 </div>
                             </div>
                         </div>
@@ -143,18 +135,16 @@
 
                         <div class="card-body">
                             <div class="text-muted h7"> <i class="fa fa-clock-o"></i>{{post.data | date:
-                                'dd/MM/yyyy'}}
-                                às {{post.data | date: 'HH:mm'}}</div>
+                                'dd/MM/yyyy'}} às {{post.data | date: 'HH:mm'}}
+                            </div>
+                            <p class="card-text mt-3 h8">{{post.corpo}}</p>
 
-
-                            <p class="card-text mt-3">{{post.corpo}}</p>
                             <img src="{{post.urlImagemVideo}}" alt="" decoding="auto"
-                                class="max-width-height-numero mt-2">
+                                class="max-width-height-numero displayed mt-2">
 
 
 
                         </div>
-
 
                     </div>
                     <!-- Post /////-->
@@ -163,7 +153,7 @@
             </div>
         </div>
 
-        <div class="col-md-2 bg-cinza-claro">
+        <div class="col-md-3" id="img-bg-invertido">
 
             <!-- <div class="container mt-5"> -->
 
