--- a/src/app/grupo/grupo.component.html
+++ b/src/app/grupo/grupo.component.html
@@ -90,7 +90,7 @@
                       class="card-img-top foto" height="200" width="250" alt="GRUPO SEM IMAGEM"></a>
                   <div class="card-body">
                     <a [routerLink]="['/grupo-page', item.idGrupo]">
-                      <h5 class="card-title m-0">{{item.nomeGrupo}}</h5>
+                      <h5 class="card-title m-0 mb-3">{{item.nomeGrupo}}</h5>
                     </a>
                     <p class="text-muted">Descrição: {{item.descricao}}</p>
                     <small class="card-text mt-3">{{item.criador.nome}}</small>
@@ -109,7 +109,7 @@
                       class="card-img-top foto" height="200" width="250" alt=""></a>
                   <div class="card-body">
                     <a [routerLink]="['/grupo-page', item.idGrupo]">
-                      <h5 class="card-title m-0">{{item.nomeGrupo}}</h5>
+                      <h5 class="card-title m-0 mb-3">{{item.nomeGrupo}}</h5>
                     </a>
                     <p class="text-muted">Descrição: {{item.descricao}}</p>
 
