--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,9 +9,8 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center">
                 <li class="nav-item">
                     <a routerLink='/home'>
-                        <img src="../../assets/img/Ciclonext-preto-completo.svg" alt="Logo Ciclonext" width="300px" height="100px"
-
-                            class="img-fluid p-1 logo">
+                        <img src="../../assets/img/Ciclonext-preto-completo.svg" alt="Logo Ciclonext" width="300px" height="100px" class="img-fluid p-1 logo">
+                        <img src="../../assets/img/logo-circulo.svg" alt="Logo Ciclonext" width="50px" height="500px" class="img-fluid p-1 rotate">
                     </a>
                 </li>
                 <li class="nav-item p-lg-3">
