--- a/src/app/postagem/postagem.component.html
+++ b/src/app/postagem/postagem.component.html
@@ -32,7 +32,7 @@
                 <div class="col-md-6 d-flex justify-content-center">
 
                     <div class="d-flex justify-content-center">
-                        <img src="https://i.imgur.com/qAJ4jET.png" alt="imagem perfil" height="500px" width="500px"
+                        <img src="../../assets/img/profile-data-animate.svg" alt="imagem perfil" height="500px" width="500px"
                             class="rounded mx-auto d-block me-5 mb-3">
                     </div>
 
